# MyServer

./: CMakeLists.txt  README.md  server.sdf  server.sln  server.vcxproj  server.vcxproj.filters
base/: CMakeLists.txt  FileUtil_test.cpp  LogStream.cpp  LogStream.h  LogStream_test.cpp  Logfile_test.cpp  Logging_test.cpp  Singleton_test.cpp  asynclogging.cpp  asynclogging.h  configfilereader.cpp  configfilereader.h  countdownlatch.cpp  countdownlatch.h  fileutil.cpp  fileutil.h  logfile.cpp  logfile.h  logging.cpp  logging.h  threadpool.cpp  threadpool.h  timestamp.cpp
base/tests/: Asynclogging_test.cpp  CMakeLists.txt  ConfigFileReader_test.cpp  FileUtil_test.cpp  LogStream_test.cpp  Logfile_test.cpp  Logging_test.cpp  Singleton_test.cpp  Threadpool_test.cpp  Timestamp_test.cpp
chatserversrc/: IMServer.cpp  IMServer.h  bussinessLogic.cpp  bussinessLogic.h  chatSession.cpp  chatSession.h  main.cpp  monitorserver.cpp  monitorsession.cpp  tcpSession.cpp  tcpSession.h  usermanager.cpp  usermanager.h
database/: databasemysql.cpp  databasemysql.h  field.cpp  field.h  queryresult.cpp  queryresult.h
etc/: chatserver.conf  webserver.conf
mysql/: CMakeLists.txt  mysqlmanager.cpp  mysqlmanager.h  mysqltask.h  tasklist.cpp  tasklist.h
mysql/tests/: CMakeLists.txt  mysql_test.cpp
net/: CMakeLists.txt  accept.cpp  accept.h  buffer.cpp  buffer.h  callback.h  channel.cpp  channel.h  connector.cpp  connector.h  endian.h  epollpoller.cpp  epollpoller.h  eventloop.cpp  eventloop.h  eventloopthread.cpp  eventloopthread.h  eventloopthreadpool.cpp  eventloopthreadpool.h  inetaddress.cpp  inetaddress.h  protocolstream.cpp  protocolstream.h  sockets.cpp  sockets.h  tcpclient.cpp  tcpclient.h  tcpconnection.cpp  tcpconnection.h  tcpserver.cpp  tcpserver.h  timer.cpp  timer.h  timerId.h  timerQueue.cpp  timerQueue.h
net/examples/: CMakeLists.txt
net/examples/asio/: CMakeLists.txt
net/examples/asio/chat/: client.cpp  codec.h  server.cpp
net/examples/filetransfer/: CMakeLists.txt  download.cpp  download2.cpp  download3.cpp
net/examples/hiredis/: CMakeLists.txt  Hiredis.cpp  Hiredis.h  mrediscli.cpp
net/examples/multiplexer/: CMakeLists.txt  demux.cpp  multiplexer.cpp  multiplexer_simple.cpp
net/examples/protobuf/codec/: CMakeLists.txt  Codec_test.cpp  codec.cpp  codec.h  query.proto
net/examples/shorturl/: CMakeLists.txt  shorturl.cpp
net/examples/simple/: CMakeLists.txt
net/examples/simple/time/: main.cpp  time.cpp  time.h
net/examples/socks4a/: CMakeLists.txt  socks4a.cpp  tcprelay.cpp  tunnel.h
net/examples/twisted/: CMakeLists.txt  finger01.cpp  finger02.cpp  finger03.cpp  finger04.cpp  finger05.cpp  finger06.cpp  finger07.cpp
net/http/: CMakeLists.txt  HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cc  HttpServer.cpp  HttpServer.h
net/http/tests/: HttpRequest_test.cpp  HttpServer_test.cpp
net/tests/: Buffer_test.cpp  CMakeLists.txt  Channel_test.cpp  EchoClient_test.cpp  EchoServer_test.cpp  EventLoopThreadPool_test.cpp  EventLoopThread_test.cpp  EventLoop_test.cpp  Inetaddress_test.cpp  ProtocolStream_test.cpp  Sockets_test.cpp  TcpClientReg1_test.cpp  Tcpserver_test1.cpp  TimerQueue_test.cpp
reactor/: CMakeLists.txt  callback.h  channel.cpp  channel.h  epollpoller.cpp  epollpoller.h  eventloop.cpp  eventloop.h  eventloopthread.cpp  eventloopthread.h  timer.cpp  timer.h  timerId.h  timerQueue.cpp  timerQueue.h
reactor/protobuf/: Makefile  codec_test.cc  dispatcher.cc
reactor/tests/: CMakeLists.txt  EventLoop_test.cpp  EventloopThread_test.cpp  PendingFunc_test.cpp  Reactor_test.cpp  timerqueue_test.cpp
server/: server.sdf  server.sln
server/server/: server.vcxproj
server/server/base/: CMakeCache.txt  CMakeLists.txt  Makefile  Timestamp_test.cpp  cmake_install.cmake  timestamp_test
utils/: Adapter.cpp  Adapter.h  CMakeLists.txt  StringUtil.cpp  StringUtil.h  URLEncodeUtil.cpp  URLEncodeUtil.h  test.cpp
utils/tests/: Adapter_test.cpp  urlcode_test.cpp
webserver/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  HttpContext.cpp  HttpRequest.h  HttpResponse.cpp  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  main.cpp
webserver/tests/: CMakeLists.txt  HttpClient_test.cpp  HttpRequest_test.cpp  HttpServer_test.cpp
