# 指定生成目标 
#add_executable(Asynclogging_test Asynclogging_test.cpp)
# 添加链接
#target_link_libraries(Asynclogging_test base)

#add_executable(Logfile_test Logfile_test.cpp)
#target_link_libraries(Logfile_test base)
#
#add_executable(Logging_test Logging_test.cpp)
#target_link_libraries(Logging_test base)

#add_executable(Logstream_test Logstream_test.cpp)
#target_link_libraries(Logstream_test base)

#add_executable(Singleton_test Singleton_test.cpp)
#target_link_libraries(Singleton_test base)

#add_executable(Timestamp_test Timestamp_test.cpp)
#target_link_libraries(Timestamp_test base)

#add_executable(Fileutil_test Fileutil_test.cpp)
#target_link_libraries(Fileutil_test base)

#add_executable(ConfigFileReader_test ConfigFileReader_test.cpp)
#target_link_libraries(ConfigFileReader_test base)

add_executable(ThreadPool_test Threadpool_test.cpp)
target_link_libraries(ThreadPool_test base)