add_executable(filetransfer_download download.cpp)
target_link_libraries(filetransfer_download net)

add_executable(filetransfer_download2 download2.cpp)
target_link_libraries(filetransfer_download2 net)

#add_executable(filetransfer_download3 download3.cpp)
#target_link_libraries(filetransfer_download3 net)

